Fix overflow in code blocks

--- a/src/styles/content.less
+++ b/src/styles/content.less
@@ -5,9 +5,12 @@
     color: rgba(0, 0, 0, 65%);
   }
 
+  pre {
+    overflow-x: auto;
+  }
+
   pre code {
     display: block;
-    overflow-x: auto;
   }
 
   a {
